--- a/students/lhn2112.md
+++ b/students/lhn2112.md
@@ -17,7 +17,8 @@ I'm planning to build a library in Java (or maybe Javascript) to automate the pr
 
 ## Project Contributions
 
-I'm interested in contributing to  project-wildflyelytron, which is a security framework for Java clients and application server.
+**[1st Contribution](https://github.com/codethecoffee/leetcode-solutions/pull/3)**
+**[2nd Contribution](https://github.com/codethecoffee/leetcode-solutions/pull/4)**
 
 About the project:
 
